--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "envialosimple-transaccional",
+  "name": "@envialosimple/transaccional",
   "version": "1.0.0",
   "description": "Node.js SDK for EnvíaloSimple Transaccional",
-  "main": "index.js",
+  "main": "src/index.ts",
   "scripts": {
     "test": "jest --config jest.config.ts"
   },
