--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "@envialosimple/transaccional",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Node.js SDK for EnvíaloSimple Transaccional",
-  "main": "src/index.ts",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsc",
-    "test": "jest --config jest.config.ts"
+    "test": "jest --config jest.config.ts",
+    "prepublish": "tsc"
   },
   "repository": {
     "type": "git",
