--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,8 @@
     ],
     "exclude": [
         "node_modules",
-        "**/tests/*"
+        "**/tests/*",
+        "node_modules",
+        "dist"
     ]
 }
