--- a/.env.dist
+++ b/.env.dist
@@ -5,4 +5,6 @@ TEST_FROM_NAME="John Smith"
 TEST_TO_NAME="John Doe"
 TEST_TEMPLATE_ID=SomeValidTemplateID
 TEST_INVALID_FROM_EMAIL=somename@mail.com
-TEST_SUBJECT="PyTest Session"
+TEST_SUBJECT="Node.js Jest Session"
+TEST_REPLY_TO="reply@here.com"
+TEST_PREVIEW_TEXT="This is some preview text"
